[package]
name = "lights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.18.1", features= ["full"]}
btleplug = "0.9.2"
hex = "0.4.3"
nokhwa = {version="0.9.4", features = ["input-msmf"]}
image ="0.23.14"