[package]
name = "lights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.18.1", features= ["full"]}
btleplug = "0.9.2"
hex = "0.4.3"
image ="0.23.14"
color-thief = "0.2.1"
colorsys = "0.6.5"
opencv = "0.63.1"